# fiap-pos-ml-eng-techchallenge-1

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  application.toml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 1-tech-challenge.ipynb
src/: data.py  main.py  settings.py  utils.py
src/routers/: auth.py  data.py  info.py
src/schemas/: auth.py
src/security/: auth.py
