[tool.poetry]
name = "fiap-pos-techchallenge"
version = "0.1.0"
description = "Projeto para o curso de Pós Graduação em Machine Learning Engineering da FIAP"
authors = ["Lucas Vidor Migotto <lvmigotto1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pandas = "^2.2.2"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
